--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <title>UT Tracker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon">
 </head>
-<body>
+<body class="bg-stone-100">
   <app-root></app-root>
 </body>
 </html>
